--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,9 @@ kramdown:
 
 # Collections
 collections:
-  - protected
+  protected:
+    output: true
+    permalink: /:collection/:path/
   teaching:
     output: true
     permalink: /:collection/:path/
